--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,11 @@ php:
   - hhvm
 
 install:
-  - sudo apt-get exiftool
   - composer install --no-interaction --prefer-source
+
+addons:
+  apt:
+    packages:
+    - exiftool
 
 script: phpunit
