--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     "symfony/process": "^3.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "5.5.*"
   },
   "autoload": {
     "psr-4": {
