--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,13 +1,6 @@
 build:
   environment:
-    php:
-    - '5.6.9'
-    - '5.6.16'
-    - '7.0.6'
-    - '7.0.7'
-    - '7.0.8'
-    - '7.1.0'
-    - 'hvm'
+    php: '5.6.9'
 
   dependencies:
       before:
