--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,14 +1,14 @@
 build:
   environment:
-    php: '5.6.9'
+    php: "5.6.9"
 
   dependencies:
       before:
-          - 'apt-get install libimage-exiftool-perl'
+          - "sudo apt-get install libimage-exiftool-perl"
 
   tests:
       before:
-          - 'phpunit'
+          - "phpunit"
 
 before_commands:
     - "composer install --no-interaction --prefer-source"
