--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -7,12 +7,8 @@ build:
           - "sudo apt-get install libimage-exiftool-perl"
 
   tests:
-      override:
-      -
-          command: "phpunit --coverage-clover logs/coverage.clover"
-          coverage:
-              file: "logs/coverage.clover"
-              format: 'clover'
+      before:
+          - "phpunit"
 
 before_commands:
     - "composer install --no-interaction --prefer-source"
